custom/themes/ingenuity/src/sass/layout/_home.scss
.textwidget {
	@include media($bp-small) {
		display: none;
	}
}

.fullscreen-bg {
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	overflow: hidden;
	z-index: -100;
	filter: grayscale(80%) brightness(0.8) opacity(1);
	@include media($mobile-landscape) {
		display: none;
	}
	@include media($bp-small) {
		display: none;
	}
}

.fullscreen-bg.default-vidheader {
	position: absolute;
	.fullscreen-bg_video {
		
	}
}

.fullscreen-bg__video {
	position: absolute;
	top: 0;
	left: 0;
	width: 115%;
	height: 115%;
	@include media($bp-med) {
		top: -300px;
		left: -300px;
		width: 200%;
		height: 200%;
	}
	@include media($bp-large) {
		top: -160px;
		left: -160px;
		width: 150%;
		height: 150%;
	}
	@include media($bp-xlarge) {
		top: -200px;
		left: -200px;
		width: 140%;
		height: 140%;
	}
	@include media($bp-xxlarge) {
		top: -200px;
		left: -200px;
		width: 135%;
		height: 135%;
	}
}

// @media (min-aspect-ratio: 16/9) {
//   .fullscreen-bg__video {
//     height: 300%;
//     top: -100%;
//   }
// }

// @media (max-aspect-ratio: 16/9) {
//   .fullscreen-bg__video {
//     width: 300%;
//     left: -100%;
//   }
// }

// ROTATING WORDS + SENTENCE
// 	keeping type styles in here 

.rw-wrapper{
	// width: 80%;
	// position: relative;
	margin: 110px auto 0 auto;
	font-family: $main-headings;
	padding: 10px;
	z-index: 100;
	width: 100%; //added because of IE
	@include media($bp-small) {
		margin-top: 20px;
		width: 100%;
	}
	@include media($bp-med) {
		margin-top: 50px;
	}
	@include media($bp-large) {
		margin-top: 50px;
		position: relative;
	}
	a.sentence-link {
		color: rgba(255,255,255, 1);
		border-bottom: 1px solid rgba(255,255,255, 0.3);
		@include media($bp-small) {
			border-bottom: 1px solid rgba(255,255,255, 0.8);
		}
		&:hover {
			color: $black;
			background-color: $yellow;
			border-bottom: 1px solid $yellow;
		}
	}
	a.rotator-link {
		color: $yellow;
	}
}

h2.rw-sentence{
	position: relative;
	margin: 0;
	text-align: left;
	z-index: 100;
	font-weight: 600;
	// width: 100%;
	@include media($bp-small) {
		margin: 0 0 0 5px;
		font-size: modular-scale(3, 1.3rem); 
		line-height: modular-scale(3, 1.6rem); 
	}
	@include media($bp-med) {
		text-align: left;
		margin: 0 8%;
		font-size: modular-scale(3); 
		line-height: modular-scale(3, 1.75rem); 
	}
	@include media($bp-large) {
		margin: 0 8%;
		text-align: left;
	    font-size: modular-scale(5, 1.5rem); 
		line-height: modular-scale(5, 1.7rem); 
	}	
	@include media($bp-xlarge) {
		margin: 0 8%;
		text-align: left;
	    font-size: modular-scale(5, 1.6rem); 
		line-height: modular-scale(5, 1.8rem);
	}
	@include media($bp-xxlarge) {
		margin: 0 8%;
		text-align: left;
	    font-size: modular-scale(6); 
		line-height: modular-scale(6, 1.75rem);
	}
	@include media($mobile-landscape) {
		margin: 0 10%;
		font-size: modular-scale(2, 1.3rem); 
		line-height: modular-scale(2, 1.4rem); 
	}
	@include media($bp-xsmall) {
		margin: 0 0 0 5px;
		font-size: modular-scale(2, 1.2rem); 
		line-height: modular-scale(2, 1.5rem); 
	}
}

.rw-sentence a span {
	// color: ;
	font-size: 100%;
	font-weight: 600;
	text-align: center;
}

#move-over {
	padding-left: 630px;
	font-size: 100%;
	font-size: modular-scale(3, 1.3rem); 
	line-height: modular-scale(3, 1.6rem); 
	@include media($bp-small) {
		display: none;
	}
	@include media($bp-med) {
		padding-left: 360px;
		font-size: modular-scale(2, 1.3rem); 
		line-height: modular-scale(2, 1.6rem); 
	}
	@include media($bp-large) {
		padding-left: 610px;
	}
	@include media($bp-xlarge) {
		padding-left: 670px;
	}
	@include media($bp-xxlarge) {
		padding-left: 810px;
	}
	@include media($mobile-landscape) {
		padding-left: 230px;
		font-size: modular-scale(0, 1.3rem); 
		line-height: modular-scale(0, 1.6rem); 
	}
}

.rw-words{
	display: inline;
	// text-indent: 10px;
	&:hover a.rotator-link {
		color: $black;
		span {
			color: $black;
			background-color: $yellow;
		}

	}
}

div.rw-words.rw-words-1 {
	// border-bottom: 4px solid $white;
}

.rw-words-1 a span.rotator {
	position: absolute;
	opacity: 0;
	overflow: hidden;
	color: $yellow;
	-webkit-animation: rotateWord 18s linear infinite 0s;
	-ms-animation: rotateWord 18s linear infinite 0s;
	animation: rotateWord 18s linear infinite 0s;
	margin-left: 20px;
	padding-right: 8px;
	border-bottom: 1px solid rgba(252, 216, 56, 0.3);
	@include media($bp-small) {
		left: 0;
		margin: 0;
		bottom: -65px;
		padding: 0;
		border-bottom: 1px solid rgba(252, 216, 56, 0.8);
	}
	@include media($bp-xsmall) {
		bottom: -45px;
	}
	@include media($bp-med) {
		left: -20px;
	}
	@include media($bp-large) {
		bottom: -100px;
		bottom: 8px;
		left: -20px; 
		line-height: modular-scale(5, 1.5rem); 
	}
	@include media($bp-xlarge) {
		line-height: modular-scale(5, 1.5rem); 
	}
	@include media($bp-xxlarge) {
		left: 0;
		margin: 0;
		bottom: 0;
		overflow: initial;
		line-height: modular-scale(6, 1.5rem);
	}
	@include media($bmobile-landscape) {
		left: 175px;
	}
}

.rw-words a span.sq-ft {
	display: inline;
	font-size: modular-scale(2, 1.3rem); 
	line-height: modular-scale(2, 1.6rem); 
	color: $white;
	display: none;
	@include media($bp-small) {
		display: inline;
		font-size: modular-scale(0, 0.9rem);
		line-height: modular-scale(0, 0.9rem);
		z-index: 150;
	}
}

.rw-words-1 a:nth-child(2) span { 
    -webkit-animation-delay: 3s; 
	-ms-animation-delay: 3s; 
	animation-delay: 3s; 
	// color: $yellow;
}
.rw-words-1 a:nth-child(3) span  { 
    -webkit-animation-delay: 6s; 
	-ms-animation-delay: 6s; 
	animation-delay: 6s; 
	// color: $yellow;	
}
.rw-words-1 a:nth-child(4) span { 
    -webkit-animation-delay: 9s; 
	-ms-animation-delay: 9s; 
	animation-delay: 9s; 
	// color: $yellow;
}
.rw-words-1 a:nth-child(5) span { 
    -webkit-animation-delay: 12s;
	-ms-animation-delay: 12s; 
	animation-delay: 12s; 
	// color: $yellow;
}
.rw-words-1 a:nth-child(6) span { 
    -webkit-animation-delay: 15s; 
	-ms-animation-delay: 15s; 
	animation-delay: 15s; 
	// color: $yellow;
}
@-webkit-keyframes rotateWord {
    0% { opacity: 0; }
    2% { opacity: 0; -webkit-transform: translateY(-30px); }
	5% { opacity: 1; -webkit-transform: translateY(0px);}
    17% { opacity: 1; -webkit-transform: translateY(0px); }
	20% { opacity: 0; -webkit-transform: translateY(30px); }
	80% { opacity: 0; }
    100% { opacity: 0; }
}
@-ms-keyframes rotateWord {
    0% { opacity: 0; }
    2% { opacity: 0; -ms-transform: translateY(-30px); }
	5% { opacity: 1; -ms-transform: translateY(0px);}
    17% { opacity: 1; -ms-transform: translateY(0px); }
	20% { opacity: 0; -ms-transform: translateY(30px); }
	80% { opacity: 0; }
    100% { opacity: 0; }
}
@keyframes rotateWord {
    0% { opacity: 0; }
    2% { opacity: 0; -webkit-transform: translateY(-30px); transform: translateY(-30px); }
	5% { opacity: 1; -webkit-transform: translateY(0px); transform: translateY(0px);}
    17% { opacity: 1; -webkit-transform: translateY(0px); transform: translateY(0px); }
	20% { opacity: 0; -webkit-transform: translateY(30px); transform: translateY(30px); }
	80% { opacity: 0; }
    100% { opacity: 0; }
}

